# movie-barcode

./: .gitignore  README.md  code_barre.py  setup.cfg
images/: logo.ai
movie_barcode/: __init__.py  barcode.py  movie.py  movies.py  timer.py
