[metadata]
name = movie_barcode
author = Marc Bresson
version = 1.0
license = License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
url = https://github.com/MarcBresson/

[options]
install_requires =
    av
    Pillow

[classifiers]
classifiers =
    Development Status :: 5 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Topic :: Multimedia :: Video
    Programming Language :: Python :: 3.10
    Typing :: Typed
